--- a/css/lean.css
+++ b/css/lean.css
@@ -27,6 +27,7 @@
 
 .page-content {
   min-height: calc(100vh - 1px);
+  padding-top: 170px;
   /*padding-bottom: 100px;*/
 }
 
@@ -41,7 +42,7 @@
 }
 
 .slick-jumbotron-panel {
-  padding-top: 120px;
+  padding-top: 170px;
   min-height: calc(100vh - 1px);
   /*margin-bottom: -120px;*/
 }
